--- a/site/solution_2/index.html
+++ b/site/solution_2/index.html
@@ -3,8 +3,8 @@
 
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="styles.css">
-	<link rel="stylesheet" type="text/css" href="queries.css">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="css/queries.css">
 	<link href="https://fonts.googleapis.com/css?family=Lato:100,300,400, rel=" stylesheet">
 	<title>Solution 1</title>
 
